--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "angular-route": "^1.3.14",
     "express": "^4.12.2"
   },
   "devDependencies": {},
@@ -12,6 +11,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Jay",
+  "author": "Me",
   "license": "MIT"
 }
